# sacred

./: .gitignore  LICENSE  README.md  sacred.cabal
sacred/: Logic.hs  Main.hs  Server.hs  Types.hs
sacred-web/: sacred-web.css  sacred-web.html
sacred-web/client/: route.js  template.js
sacred-web/server/: server.js
sacred/Driver/: JavaScript.hs
