name:                sacred
version:             0.1.0.0
synopsis:            Sacred API
homepage:            sacred.meteor.com
license:             MIT
license-file:        LICENSE
author:              Evan Sebastian
maintainer:          evans@comp.nus.edu.sg
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Main
  build-depends:       base >=4.7 && <4.8
                    ,  containers
                    ,  text
                    ,  language-javascript
                    ,  scotty
  hs-source-dirs:      sacred
  default-language:    Haskell2010

executable sacred
    main-is:             sacred/Main.hs
    default-language:    Haskell2010
    build-depends:       base >=4.7 && < 4.8
